Changed route names and added reference to count
